--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-animated-nav-tab-bar": "^3.1.8",
     "react-native-mathjax": "^2.1.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
